# lightning-hydra-template-louise

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  Makefile  README.md  cog.yaml  predict.py  pyproject.toml  requirements.txt  requirements_old.txt
.github/workflows/: test.yml
Docker/demo/: Dockerfile  demo_cifar10_scripted_docker.py  requirements.txt
configs/: demo.yaml  demo_cifar10_scripted.yaml  demo_scripted.yaml
configs/experiment/: cifar10.yaml  mnist.yaml
configs/hparams_search/: cifar10_optuna.yaml
configs/logger/: many_loggers.yaml
configs/model/: timm.yaml
src/: demo.py  demo_cifar10_scripted.py  demo_scripted.py  train.py
src/datamodules/: cifar10_datamodule.py  mnist_datamodule.py
src/models/: __init__.py  mnist_module.py  timm_module.py
src/ui/: __init__.py  run.py
src/ui/core/: __init__.py  common.py  serialization.py  utils.py
src/utils/: utils.py
tests/: test_mnist_datamodule.py
tests/helpers/: package_available.py
tests/test_datamodules/: __init__.py
tests/test_models/: __init__.py
