[tool.poetry]
name = "lightning-hydra-template-louise"
version = "0.1.0"
description = "Template Python project for research experiments tracking in Pytorch Lightning and Hydra"
authors = ["Louise NAUD <louise.naud@gmail.com>"]
readme = "README.md"
packages = [{ include = "lightning_hydra_template_louise" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
torch = "^1.12.1"
torchvision = "^0.13.1"
pytorch-lightning = "^1.7.7"
torchmetrics = "^0.10.0"
hydra-core = "^1.2.0"
hydra-colorlog = "^1.2.0"
timm = "^0.6.11"
scipy = "^1.9.1"
wandb = "^0.13.3"
mlflow = "^1.30.0"
gradio = "^3.7"
bandit = "^1.7.4"
streamlit = "^1.13.0"
stqdm = "^0.0.4"
lightning = "^2022.10.20"

[tool.poetry.group.dev.dependencies]
rich = "^12.6.0"
pytest = "^7.1.3"
sh = "^1.14.3"
pyrootutils = "^1.0.4"
pre-commit = "^2.20.0"
pylint = "^2.15.3"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--color=yes",
    "--durations=0",
    "--strict-markers",
    "--doctest-modules",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
log_cli = "True"
markers = [
    "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests", "logs"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[tool.bandit.any_other_function_with_shell_equals_true]
no_shell = [
    "os.execl",
    "os.execle",
    "os.execlp",
    "os.execlpe",
    "os.execv",
    "os.execve",
    "os.execvp",
    "os.execvpe",
    "os.spawnl",
    "os.spawnle",
    "os.spawnlp",
    "os.spawnlpe",
    "os.spawnv",
    "os.spawnve",
    "os.spawnvp",
    "os.spawnvpe",
    "os.startfile"
]
shell = [
    "os.system",
    "os.popen",
    "os.popen2",
    "os.popen3",
    "os.popen4",
    "popen2.popen2",
    "popen2.popen3",
    "popen2.popen4",
    "popen2.Popen3",
    "popen2.Popen4",
    "commands.getoutput",
    "commands.getstatusoutput"
]
subprocess = [
    "subprocess.Popen",
    "subprocess.call",
    "subprocess.check_call",
    "subprocess.check_output"
]
